# BudsLink

./: LICENSE  README.md  debug_sony.js  debug_sony.py  io.github.maniacx.BudsLink.yml  meson.build  script.js  update-translation.sh
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_new_device.yml  03_feature_request.yml
.github/workflows/: release-flatpak.yml
build-aux/: flathub-manifest.yml  snapcraft.yaml
data/: io.github.maniacx.BudsLink.data.gresource.xml  io.github.maniacx.BudsLink.desktop  io.github.maniacx.BudsLink.gschema.xml  io.github.maniacx.BudsLink.metainfo.xml  meson.build  stylesheet.css
data/dbus-interfaces/: io.github.maniacx.BudsLink.Device.xml  io.github.maniacx.BudsLink.DeviceManager.xml
po/: af.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  io.github.maniacx.BudsLink.pot  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  lt.po  (+28 more)
src/: app.js  io.github.maniacx.BudsLink.js  io.github.maniacx.BudsLink.src.gresource.xml  main.js  meson.build
src/appLibs/: bluetoothClient.js  confirueWindowlauncher.js  dbusService.js  gvcProvider.js  signalTracker.js  themeManager.js
src/appLibs/widgets/: batterySetWidget.js  checkButtonBin.js  circleBatteryIconWidget.js  deviceRow.js  logWindow.js  optionsBox.js  radioButtonBin.js  settingsButton.js  sliderBin.js  (+1 more)
src/lib/: enhancedDeviceSupportManager.js
src/scriptLibs/: preChecks.js
subprojects/gvc/: meson.build
(+59 files in other folders)
